tests/rgs/valid/plain_comments.rgs
# This is a plain comment
STORY DEFAULT. # inline
    AGENT Guard:
        ACTION patrol.
        # another comment
        EVENT idle MYSELF.
        DURING ALWAYS:
            WHEN idle MYSELF:
                DO patrol. # end comment
