tests/rgs/semantic_errors/enter_in_default_story.rgs
STORY DEFAULT.
    AGENT Guard:
        ACTION patrol.
        EVENT idle MYSELF.
        DURING ALWAYS:
            WHEN idle MYSELF:
                ENTER some_phase.
